--- a/main/blog/templates/view.html
+++ b/main/blog/templates/view.html
@@ -6,4 +6,9 @@
 <p>{{ post.content }}</p>
 <a href="{{ url_for('blog.comment', post_id=post.id) }}">Comment</a>
 
+{% for comment in post.comments %}
+<h2>Comment {{ comment.id }}</h2>
+<p>{{ comment.content }}</p>
+{% endfor  %}
+
 {% endblock %}
