--- a/main/blog/templates/view.html
+++ b/main/blog/templates/view.html
@@ -4,7 +4,7 @@
 
 <h1>{{ post.title }}</h1>
 <p>{{ post.content }}</p>
-<a href="{{ url_for('blog.comment', post_id=post.id) }}">Comment</a>
+<a href="{{ url_for('comments.comment', post_id=post.id) }}">Comment</a>
 
 {% for comment in post.comments %}
 <h2>Comment {{ comment.id }}</h2>
